# GLSandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: basic.vert.glsl  boxes.frag.glsl  mandelbrot.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
libs/: CMakeLists.txt  assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  spdlog.cmake  stb.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: camera.cpp  camera.hpp  common.cpp  common.hpp  main.cpp  shader.cpp  shader.hpp
src/demos/: boxesDemo.cpp  boxesDemo.hpp  demo.hpp  hdrBloomDemo.cpp  hdrBloomDemo.hpp  mandelbrotDemo.cpp  mandelbrotDemo.hpp  normalMapDemo.cpp  normalMapDemo.hpp  triangleDemo.cpp  triangleDemo.hpp
